--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <input type="submit" value="make">
   </form>
   <hr>
-  <button onclick="copyText()">Copy</button>
-  <textarea id="out"></textarea>
+  <button onclick="copyText()">Copy</button><br>
+  <textarea id="out" cols="30" rows="10" disabled></textarea>
   <script src="js/main.js"></script>
 </body>
 </html>
